// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListAttendee /> matches snapshot when !isReserves 1`] = `
<div
  className="event-attendees not-reserves"
>
  <div
    className="attendees-wrapper"
  >
    <ul
      className="event-attendees not-reserves"
    >
      <li
        className="event-attendee"
      >
        <img
          alt="jason carty"
          src="http://gravatar.com/avatar/c23b621863377dd53ac87b761c1e5c9a.png?s=40&d=wavatar"
        />
        <span
          className="attendee-name"
        >
          jason carty
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<EventListAttendee /> matches snapshot when isReserves 1`] = `
<div
  className="event-attendees reserves"
>
  <div
    className="attendees-wrapper"
  >
    <ul
      className="event-attendees reserves"
    >
      <li
        className="event-attendee"
      >
        <img
          alt="jason carty"
          src="http://gravatar.com/avatar/c23b621863377dd53ac87b761c1e5c9a.png?s=40&d=wavatar"
        />
        <span
          className="attendee-name"
        >
          jason carty
        </span>
      </li>
    </ul>
  </div>
</div>
`;
